# PolyRAG

./: .env.example  .gitignore  Dockerfile.service  Dockerfile_gcp.app  Dockerfile_gcp.service  README.md  compose.yaml  config.yml  notes.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml  test.yml
.streamlit/: config.toml
.variables/asnr/: display_texts.json  instructions.md  instructions.txt
.variables/demo_articles/: display_texts.json  instructions.md  instructions.txt
docker/: Dockerfile.app  Dockerfile.service
docker/postgres_init/: 01_restore_from_dump.sh
scripts/: clean_arxiv.py  index-folder-script.py  index-urls-script.py  scrape_arxiv.py  scrape_medrxiv.py
src/: Chat.py  INTEGRATION_DEMANDS_RAG.md  auth_helpers.py  auth_service.py  content_classifiers.py  db_manager.py  display_texts.py  get_config.py  index-folder-script.py  index-script.py  index-urls-script.py  pdf_viewer_with_annotations.py  prompt_generator.py  rag_system.py  sections_demands.py  security.py  streamlit-app.py  streamlit_app.py
src/agents/: _graph_store.py  agents.py  graphing_agent.py  pg_rag_assistant.py  rag_tool.py  tool_graphing_agent.py  tools_highlight.py  tools_pg.py  tools_plotly.py
src/client/: client.py
src/core/: llm.py  settings.py
src/frontend/: changelog.py  chat.py  help.py  pdf_viewer_with_annotations.py  user.py
src/frontend-pages/: Whisper_Live.py  changelog.py  chat.py  feedback.py  help.py  live_transcription.html
src/memory/: postgres.py
src/migrations/: add_content_classification_to_rag.sql
src/pages/: 1_Utilisateur.py  2_Commentaires_&_Suggestions.py  3_Aide.py
src/schema/: __init__.py  models.py  schema.py
src/service/: service.py  utils.py
tests/app/: test_streamlit_app.py
tests/integration/: test_docker_e2e.py
tests/rag/: test_pg.py  test_rag.py  test_retrieve_by_idx.py
tests/service/: test_service.py
